# presence

./: .gitignore  Cargo.toml  README.md
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/examples/: example.py  readme.py
bindings/python/py_src/presence/: __init__.py
bindings/python/src/: lib.rs
presence/: Cargo.toml
presence/src/: block.rs  iter.rs  lib.rs  tracker.rs
src/: main.rs
