[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "presence"
description = "Packed presence tracking for machine learning models."
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/drbh/presence"
repository = "https://github.com/drbh/presence"
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dynamic = ["version"]
dependencies = []

[tool.maturin]
python-source = "py_src"
module-name = "presence._presence_pyo3"
bindings = 'pyo3'
features = ["pyo3/extension-module"]
